# clasp

./: .gitignore  AGENTS.md  CLASP_AGENT_ERGONOMICS.md  LICENSE  README.md  clasp-compiler.cabal  flake.nix  weft-compiler.cabal
.clasp-test-tmp/: repro-feedback-exact.sh  test-feedback-loop-slice.sh  test-native-claspc.debug.sh
.clasp-verify-tmp/: tmp.0jdYUj7v5i  tmp.0regmdbUtZ  tmp.1gJttSEbPU  tmp.2Ar9boqbYe  tmp.2B39taYQPV  tmp.2CJvdlm1pd  tmp.2I734QZEZ2  tmp.3MOL5thKFi  tmp.3yCrIVd4LQ  tmp.4Cv4fsbfbo  tmp.4MAYDrvnac  tmp.4eZvnex396  tmp.4hR5wzVPOt  tmp.4kO4PXzHxx  tmp.5nR7VPjYxz  tmp.69TPB4SnHK  tmp.6PdqQuRA3a  tmp.6yVJuGp9xA  tmp.7GNvEtTrHs  tmp.80GqSiASIw  tmp.88zmwlCOWz  tmp.8RjJtufVrh  tmp.9AhrRYNnpU  tmp.9E0E3YGiLf  tmp.9kCSqSqkC0  tmp.9rAe9zyuE6  tmp.9uPTj0bi9D  tmp.AHGQytpdga  tmp.ASCYAhZQPY  tmp.BDRVmr93yH  tmp.BrMplxJpO2  tmp.C2EWixn7ia  tmp.C5Dgnf5EJF  tmp.CDlclgXmnR  tmp.Cf36RdJ8Uu  tmp.CrXJZccmTe  tmp.DJOeVimeuk  tmp.E8vw38qaFA  tmp.EGamceHn71  tmp.EyXDmf1U25  (+150 more)
.clasp-verify-tmp-seq/: tmp.Dlufv6me7c  tmp.HHOvbQlNhO  tmp.JeAHdHNSHM  tmp.NfD3KRc51g  tmp.Owy9K9AO9p  tmp.UuEQrwtqaz  tmp.VqFQh4inH1  tmp.bR1SFA3tbA  tmp.dkRBB2wWQt  tmp.mquufhNOUL  tmp.oHx9H4AtN5  tmp.q7x2t79E2B  tmp.snLDVoh3jY  tmp.vOBfbsHWYg
agents/: README.md
app/: Main.hs
benchmarks/: README.md  backend-result-schema.json  node-bun-shim.mjs  result-schema.json  run-backend-benchmarks.mjs  run-benchmark.mjs  run-boundary-transport-benchmarks.mjs  run-claude-series.sh  run-codex-harness.sh  run-codex-series.sh  run-in-nix-or-current.sh  run-public-app-signal.mjs  test-audit-log.sh  (+12 more)
(+13234 files in other folders)
