cabal-version:      3.0
name:               clasp-compiler
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Clasp contributors
maintainer:         dev@synthspeak.local
category:           Compiler
build-type:         Simple
extra-doc-files:    README.md

common common-options
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:
      aeson >= 2.2 && < 2.3
    , base >= 4.18 && < 5
    , containers >= 0.6 && < 0.8
    , directory >= 1.3 && < 1.4
    , filepath >= 1.4 && < 1.6
    , megaparsec >= 9.6 && < 10
    , mtl >= 2.3 && < 2.4
    , text >= 2.0 && < 2.2

library
  import:           common-options
  hs-source-dirs:   src
  exposed-modules:
      Clasp.Checker
      Clasp.Compiler
      Clasp.Core
      Clasp.Diagnostic
      Clasp.Emit.JavaScript
      Clasp.Loader
      Clasp.Lower
      Clasp.Parser
      Clasp.Syntax

executable claspc
  import:           common-options
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      clasp-compiler
    , text >= 2.0 && < 2.2

test-suite clasp-compiler-test
  import:           common-options
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      tasty >= 1.5 && < 1.6
    , tasty-hunit >= 0.10 && < 0.11
    , text >= 2.0 && < 2.2
    , clasp-compiler
